compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_variable_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(code, 1)"
---
pub fn main() {
    let _boring_number = 72
}
