compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__selected_statements_do_not_select_outer_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  let c = {\n    let a = 10\n    let b = 20\n    a + b\n  }\n\n  echo c\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let c = {
    let a = 10
    ▔▔▔▔▔▔▔▔▔▔
    let b = 20
▔▔▔▔▔▔▔▔▔▔▔▔▔▔
    a + b
▔▔▔▔▔▔↑  
  }

  echo c
}


----- AFTER ACTION

pub fn main() {
  let c = {
    function()
  }

  echo c
}

fn function() -> Nil {
  let a = 10
    let b = 20
    a + b
  Nil
}
