compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__split_string.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  \"wibble wobble woo\"\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble wobble woo"
          ↑          
}


----- AFTER ACTION
pub fn main() {
  "wibble " <> todo <> "wobble woo"
}
