compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__unqualified_to_qualified_import_between_constructors.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn create_user(name: String) -> User {\n    User(name: name, id: 1)\n}\n\nimport user.{type User, User}\n\npub fn user_list(users: List(User)) -> List(String) {\n    User(name: \"John\", id: 1)\n    User(name: \"Jane\", id: 2)\n}\n\n"
---
----- BEFORE ACTION

pub fn create_user(name: String) -> User {
    User(name: name, id: 1)
    ▔▔▔▔▔↑                 
}

import user.{type User, User}

pub fn user_list(users: List(User)) -> List(String) {
    User(name: "John", id: 1)
    User(name: "Jane", id: 2)
}



----- AFTER ACTION

pub fn create_user(name: String) -> User {
    user.User(name: name, id: 1)
}

import user.{type User, }

pub fn user_list(users: List(User)) -> List(String) {
    user.User(name: "John", id: 1)
    user.User(name: "Jane", id: 2)
}
