compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__unqualified_to_qualified_import_in_constant_var.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nimport option.{None}\n\nconst none = None\n"
---
----- BEFORE ACTION

import option.{None}

const none = None
             ↑   


----- AFTER ACTION

import option.{}

const none = option.None
